footer spacing fix

--- a/styles/footer.less
+++ b/styles/footer.less
@@ -11,7 +11,7 @@
 
   background-color: @flash;
   .font-smoothing(@flash);
-  margin-top: @footer-spacing;
+  margin-top: @footer-spacing*2;
 
 
   &-inner {
